<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/mathExpression"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="end"
                android:singleLine="true"
                android:textSize="50sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/mathResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/seven"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonEight"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/eight"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonNine"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/nine"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonFour"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/four"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonFive"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/five"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonSix"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/six"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonOne"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/one"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/two"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonThree"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/three"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout8"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonZero"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/zero"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/decimal"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonEqual"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:background="@color/buttonDark"
            android:text="@string/equal"
            android:textColor="@color/buttonTextLight"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="90dp"
            android:layout_height="72dp"
            android:background="@color/buttonAccent"
            android:text="@string/clear"
            android:textColor="@color/buttonTextDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="90dp"
            android:layout_height="72dp"
            android:background="@color/buttonAccent"
            android:text="@string/divide"
            android:textColor="@color/buttonTextDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="90dp"
            android:layout_height="72dp"
            android:background="@color/buttonAccent"
            android:text="@string/multiply"
            android:textColor="@color/buttonTextDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="90dp"
            android:layout_height="72dp"
            android:background="@color/buttonAccent"
            android:text="@string/substract"
            android:textColor="@color/buttonTextDark"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="90dp"
            android:layout_height="72dp"
            android:background="@color/buttonAccent"
            android:text="@string/add"
            android:textColor="@color/buttonTextDark"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>